# Engine

./: .gitignore  Cargo.toml  Dockerfile  justfile
assets/: temp.glb
assets/models/Honda Civic Coupe EX 1994/: Honda_Civic_1994.blend  Honda_Civic_1994.blend1
assets/models/temp/: temp.blend  temp.blend1  temp.gltf
src/: camera.rs  lib.rs  main.rs  world.rs
src/plugins/: camera.rs  mod.rs  player.rs  terrain_ui.rs
src/plugins/world/: car.rs  floor.rs  lighting.rs  mod.rs
src/plugins/world/floor/: mod.rs  perlin.rs  terrain.rs
src/util/: rng.rs
src/world/: floor.rs  lighting.rs
