[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["bevy_dev_tools", "bevy_world_serialization", "jpeg"] }
bevy_egui = { version = "0.40.0", features = ["immutable_ctx"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
